// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_foo"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="foo"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      
      <div
        className="form-group field field-string"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_a"
            >
              A
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_a__error root_a__description root_a__help"
                autoFocus={false}
                disabled={false}
                id="root_a"
                name="root_a"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value=""
              />
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="form-group field field-number"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_b"
            >
              B
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_b__error root_b__description root_b__help"
                autoFocus={false}
                disabled={false}
                id="root_b"
                name="root_b"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_additionalProperty"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="additionalProperty"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        Test field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a test description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_foo"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="foo"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        My Field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a fancier description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_foo"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="foo"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description from both object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        My Field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a fancier description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_a"
            >
              My Item A
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_a__error root_a__description root_a__help"
                autoFocus={false}
                disabled={false}
                id="root_a"
                name="root_a"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value=""
              />
            </div>
          </div>
          <p
            className="sui-description"
            id="root_a__description"
          >
            a fancier item A description
          </p>
        </div>
      </div>
      <div
        className="form-group field field-number"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_b"
            >
              My Item B
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_b__error root_b__description root_b__help"
                autoFocus={false}
                disabled={false}
                id="root_b"
                name="root_b"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
          <p
            className="sui-description"
            id="root_b__description"
          >
            a fancier item B description
          </p>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        My Field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a fancier description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_foo"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="foo"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        My Field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a fancier description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_a"
            >
              My Item A
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_a__error root_a__description root_a__help"
                autoFocus={false}
                disabled={false}
                id="root_a"
                name="root_a"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value=""
              />
            </div>
          </div>
          <p
            className="sui-description"
            id="root_a__description"
          >
            a fancier item A description
          </p>
        </div>
      </div>
      <div
        className="form-group field field-number"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_b"
            >
              My Item B
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_b__error root_b__description root_b__help"
                autoFocus={false}
                disabled={false}
                id="root_b"
                name="root_b"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
          <p
            className="sui-description"
            id="root_b__description"
          >
            a fancier item B description
          </p>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        My Field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a fancier description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_additionalProperty"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="additionalProperty"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        Test field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a test description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_a"
            >
              A
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_a__error root_a__description root_a__help"
                autoFocus={false}
                disabled={false}
                id="root_a"
                name="root_a"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value=""
              />
            </div>
          </div>
          <p
            className="sui-description"
            id="root_a__description"
          >
            A description
          </p>
        </div>
      </div>
      <div
        className="form-group field field-number"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <label
              htmlFor="root_b"
            >
              B
            </label>
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_b__error root_b__description root_b__help"
                autoFocus={false}
                disabled={false}
                id="root_b"
                name="root_b"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
          <p
            className="sui-description"
            id="root_b__description"
          >
            B description
          </p>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      <h5
        className="ui dividing header"
        id="root__title"
      >
        Test field
      </h5>
      <p
        className="sui-description"
        id="root__description"
      >
        a test description
      </p>
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_additionalProperty"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="additionalProperty"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty
                  </label>
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
                
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_foo"
                  >
                    foo Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_foo"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="foo"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description with global label off object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      
      <div
        className="form-group field field-string"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_a__error root_a__description root_a__help"
                autoFocus={false}
                disabled={false}
                id="root_a"
                name="root_a"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-group field field-number"
      >
        <div
          className="grouped equal width fields"
        >
          <div
            className="field"
          >
            <div
              className="ui fluid input"
            >
              <input
                aria-describedby="root_b__error root_b__description root_b__help"
                autoFocus={false}
                disabled={false}
                id="root_b"
                name="root_b"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="grouped equal width fields"
    >
      
      <div
        className="form-group field field-string"
      >
        <div
          className="ui equal width grid"
        >
          <div
            className="row"
          >
            <div
              className="column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field form-group"
                >
                  <label
                    htmlFor="root_additionalProperty"
                  >
                    additionalProperty Key
                  </label>
                  <div
                    className="ui fluid input"
                    hasFeedback={true}
                    htmlFor="root_additionalProperty"
                  >
                    <input
                      aria-describedby={null}
                      defaultValue="additionalProperty"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="middle aligned column form-additional"
            >
              <div
                className="grouped equal width fields"
              >
                <div
                  className="field"
                >
                  <div
                    className="ui fluid input"
                  >
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="column"
            >
              <button
                className="ui mini icon button array-item-remove"
                onClick={[Function]}
                title="Remove"
              >
                <i
                  aria-hidden="true"
                  className="trash icon"
                  onClick={[Function]}
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="middle aligned sixteen wide column"
      >
        <div
          className="row"
        >
          <div
            style={
              Object {
                "marginTop": "1rem",
                "position": "relative",
                "textAlign": "right",
              }
            }
          >
            <button
              className="ui tiny icon button"
              onClick={[Function]}
              title="Add Item"
            >
              <i
                aria-hidden="true"
                className="plus icon"
                onClick={[Function]}
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="ui primary button"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;
